🎯 feats: Adaptação do website para suporte a telas extensas e atualização de suas informações

--- a/source/style.scss
+++ b/source/style.scss
@@ -187,7 +187,7 @@ body {
   }
 
   .specifications {
-    height: 100vh - $footer-height;
+    min-height: 100vh - $footer-height;
     padding: 6vw;
     gap: 10vw;
 
