🎯 feats: Adição do suporte a parâmetros de compartilhamento em redes sociais no sistema de subrotas externas

--- a/source/backend/templates/sub-route.html
+++ b/source/backend/templates/sub-route.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>$TITLE</title>
     <meta charset="utf-8">
+    <meta property="og:url" content="$URL">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="$TITLE">
+    <meta property="og:image" content="$IMAGE">
     <script>
-      window.location.replace("SUB-ROUTE");
+      window.location.replace("$SUB-ROUTE");
     </script>
     <style>
       * {
