🎯 feats: Adição do subroteamento ao site ruancarllo.github.io/unesp

--- a/source/backend/templates/sub-route.html
+++ b/source/backend/templates/sub-route.html
@@ -7,6 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="$TITLE">
     <meta property="og:image" content="$IMAGE">
+    <meta property="og:description" content="$DESCRIPTION">
     <script>
       window.location.replace("$SUB-ROUTE");
     </script>
