🎯 feats: Adição da capacidade de determinação de cores de plano de fundo customizadas no sistema de subrotas externas

--- a/source/backend/templates/sub-route.html
+++ b/source/backend/templates/sub-route.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>$TITLE</title>
+    <meta name="theme-color" content="COLOR">
     <meta charset="utf-8">
-    <meta property="og:url" content="$URL">
+    <meta property="og:url" content="URL">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="$TITLE">
-    <meta property="og:image" content="$IMAGE">
-    <meta property="og:description" content="$DESCRIPTION">
+    <meta property="og:title" content="TITLE">
+    <meta property="og:image" content="IMAGE">
+    <meta property="og:description" content="DESCRIPTION">
     <script>
       window.location.replace("$SUB-ROUTE");
     </script>
@@ -30,27 +31,9 @@
         align-items: center;
         justify-content: center;
 
-        background-color: #FFFFFF;
-      }
-
-      .loader {
-        width: 10vw;
-        height: 10vw;
-
-        border: 1vw solid #000000;
-        border-top: 1vw solid #FFFFFF;
-        border-radius: 100vmax;
-
-        animation: spin 1s linear infinite;
-      }
-
-      @keyframes spin {
-        0% { transform: rotate(0deg) }
-        100% { transform: rotate(360deg) }
+        background-color: COLOR;
       }
     </style>
   </head>
-  <body>
-    <div class="loader"></div>
-  </body>
+  <body></body>
 </html>
