🛠️ fixes: Correções no algoritmo de substituição de parâmetros do sistema de subrotas externas

--- a/source/backend/templates/sub-route.html
+++ b/source/backend/templates/sub-route.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="IMAGE">
     <meta property="og:description" content="DESCRIPTION">
     <script>
-      window.location.replace("$SUB-ROUTE");
+      window.location.replace("SUB-ROUTE");
     </script>
     <style>
       * {
